// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swiper flatlist renders children 1`] = `
<Fragment>
  <FlatList
    autoplay={false}
    autoplayDelay={3}
    autoplayLoop={false}
    data={
      Array [
        <Component
          source={
            Object {
              "uri": "https://...",
            }
          }
        />,
        <Component
          source={
            Object {
              "uri": "https://...",
            }
          }
        />,
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    index={0}
    initialNumToRender={1}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    onMomentumScrollEnd={[Function]}
    onScrollToIndexFailed={[Function]}
    pagingEnabled={true}
    renderAll={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Fragment>
`;

exports[`swiper flatlist renders correctly 1`] = `
<Fragment>
  <FlatList
    autoplay={false}
    autoplayDelay={3}
    autoplayLoop={false}
    data={
      Array [
        Object {
          "id": 1,
          "thumbnail": Object {
            "uri": "https://...",
          },
        },
        Object {
          "id": 2,
          "thumbnail": Object {
            "uri": "https://...",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    index={0}
    initialNumToRender={1}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    onMomentumScrollEnd={[Function]}
    onScrollToIndexFailed={[Function]}
    pagingEnabled={true}
    renderAll={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Fragment>
`;
